<resources>
    <string name="app_name">IoT: Navigation &#38; Emergency</string>
    <string name="welcome">Welcome to IoT for navigation and emergency</string>
    <string name="title_activity_init_position">InitPositionActivity</string>
    <string name="init_pos">Insert starting position</string>
    <string name="final_pos">Insert final position</string>
    <string name="manual_sel">Manual Selection</string>
    <string name="menu_sel">Menu Selection</string>
    <string name="qrcode_scan">QrCode Scan</string>
    <string name="guest_username">Guest Username or E-mail</string>
    <string name="password">Password</string>
    <string name="guest_autentication">Guest    Autentication</string>
    <string name="login">Login</string>
    <string name="iotforen">IoT for Navigation and Emergency</string>
    <string name="floor_choise">Floor choise</string>
    <string name="place_choise">Place choise</string>
    <string name="qr_scanning">QrCode scan</string>
    <string name="iot_for">IoT for&#8230;</string>
    <string name="iotForNav">&#8230;Navigation</string>
    <string name="iotForEm">&#8230;Emergency</string>
    <string name="floor_pos">Floor</string>
    <string name="insert_init_pos">Insert initial position</string>
    <string name="insert_final_pos">Insert final position</string>
    <string name="keep_calm">Keep calm</string>
    <string name="and_tap_map">and tap on the map</string>
    <string name="update_pos">Update your position</string>
    <string name="terminate_emer">TERMINATE EMERGENCY</string>
    <string name="terminate_nav">TERMINATE NAVIGATION</string>
    <string name="updates_action">Check updates</string>
    <string name="iot_nav">IoT: Navigation</string>
    <string name="cancelled_qr_code">Cancelled</string>

    <string name="exit_dialog">Do you really want to quit the application?</string>
    <string name="caution">Caution!</string>
    <string name="terminate_emerg_dialog">Is the emergency really terminated?</string>
    <string name="terminate_nav_dialog">Terminate navigation?</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>

    <string name="check_updates">Checking updates&#8230;</string>
    <string name="updated">IoT is updated!</string>
    <string name="ok_label">Ok</string>

    <string name="obsolete_data">Obsolete data</string>
    <string name="question_update_data">Update data?</string>

    <string name="updating">Updating&#8230;</string>
    <!-- <string name="loading">&#8230;loading&#8230;</string> -->
    <string name="cancel_label">Cancel</string>
    <string-array name="place">"Portineria", "Aula Magna", "Polifunzionale", "Anfiteatro", "Biblioteca", "Centro copie", "Aula Studio"</string-array>

    <string name="updates_failed_dialog">Update failed!</string>
    <string name="try_again_label">Try again</string>

    <string name="posit_selected">Position selected</string>

    <string name="updatePosition">Update position</string>
    <string name="exit">Exit</string>

    <string name="calcRoute">Route calculating&#8230;</string>

    <string name="changePlanGoUp">go up for</string>
    <string name="changePlanGoDown">go down for</string>
    <string name="changePlanFloor">floor</string>
    <string name="changePlanFloors">floors</string>
</resources>
