<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/firstPage"
        android:orderInCategory="100"
        android:title="Home"
        android:icon="@drawable/ic_home_icon"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/forward"
        android:orderInCategory="100"
        android:title="@string/posit_selected"
        android:icon="@drawable/ic_ok_icon"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/updatePos"
        android:orderInCategory="100"
        android:title="@string/updatePosition"
        android:icon="@drawable/ic_update_pos"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        android:icon="@drawable/ic_exit"
        android:visible="false"
        app:showAsAction="always"/>

</menu>