<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_sfumato"
    tools:context="it.univpm.gruppoids.iotforemergencyandnavigation.GuestActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guest_autentication"
        android:id="@+id/txtGuestAuth"
        android:layout_marginTop="27dp"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:lines="2" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/guest_username"
        android:layout_marginTop="56dp"
        android:hint="@string/guest_username"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:layout_below="@+id/txtGuestAuth"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/guest_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/password"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:layout_marginBottom="69dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:background="@drawable/background_button"/>
</RelativeLayout>
