<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/emerg_activity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/terminate_emergency_sfumato"
    tools:context="it.univpm.gruppoids.iotforemergencyandnavigation.EmergencyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/keep_calm"
        android:id="@+id/txtEmergencyActivity"
        android:layout_marginTop="27dp"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="#ffffff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/and_tap_map"
        android:id="@+id/txtEmergencyActivity2"
        android:layout_marginTop="27dp"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="#ffffff"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navigation_map"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/update_pos"
        android:id="@+id/updatePos"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/terminate_emer"
        android:textColor="@color/colorAccent"
        android:id="@+id/terminate_emer"
        android:onClick="goInitPos"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/terminate_emergency_sfumato" />
</LinearLayout>
